InfoSteel\UserBundle\Security\Core\User

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -137,3 +137,4 @@ hwi_oauth:
             type:                vkontakte
             client_id:           4891978
             client_secret:       3IZswyDPKvLaVp2qZI4S
+            scope: email
