--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -15,7 +15,7 @@ security:
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         fos_userbundle:
-            id: fos_user.user_manager
+            id: fos_user.user_provider.username_email
 
     # the main part of the security, where you can set up firewalls
     # for specific sections of your app
@@ -24,7 +24,7 @@ security:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            pattern: .*
+            pattern: ^/
             context: user
             form_login:
                 provider: fos_userbundle
@@ -42,9 +42,7 @@ security:
                 failure_path: /login
                 oauth_user_provider:
                     service: my_user_provider
-            logout:
-                path:           /logout
-                target: /login
+            logout: true
             anonymous:    true
         admin:
             pattern:            /admin(.*)
