--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -129,7 +129,7 @@ hwi_oauth:
     fosub:
         username_iterations: 30
         properties:
-#            facebook: facebook_id
+            facebook: facebook_id
 #            google: google_id
             vkontakte: vkontakte_id
     resource_owners:
@@ -138,3 +138,9 @@ hwi_oauth:
             client_id:           4891978
             client_secret:       3IZswyDPKvLaVp2qZI4S
             scope: email
+        facebook:
+            type:                facebook
+            client_id:           879036738827928
+            client_secret:       c7037ce0c5b79fc9f4e923ae1dab154e
+            options:
+                display: popup
