--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -47,8 +47,8 @@ hwi_oauth_redirect:
     resource: "@HWIOAuthBundle/Resources/config/routing/redirect.xml"
     prefix:   /login
 
-#facebook_login:
-#    pattern: /login/check-facebook
+facebook_login:
+    pattern: /login/check-facebook
 
 #google_login:
 #    pattern: /login/check-google
