--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -35,10 +35,11 @@ security:
                 csrf_provider: form.csrf_provider
             oauth:
                 resource_owners:
-                    #facebook: "/login/check-facebook"
+                    facebook: "/login/check-facebook"
                     #google: "/login/check-google"
                     vkontakte: "/login/check-vkontakte"
                 login_path: /login
+                use_forward: false
                 failure_path: /login
                 oauth_user_provider:
                     service: my_user_provider
