--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -35,7 +35,7 @@ sonata_user:
     resource: '@SonataUserBundle/Resources/config/routing/admin_security.xml'
     prefix: /admin
 
-hwi_oauth_security:
+hwi_oauth_login:
     resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
     prefix: /login
 
