--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -15,7 +15,7 @@ security:
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         fos_userbundle:
-            id: fos_user.user_provider.username_email
+            id: fos_user.user_provider.username
 
     # the main part of the security, where you can set up firewalls
     # for specific sections of your app
@@ -24,7 +24,7 @@ security:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            pattern: ^/
+            pattern: .*
             context: user
             form_login:
                 provider: fos_userbundle
@@ -41,9 +41,13 @@ security:
                 login_path: /login
                 use_forward: false
                 failure_path: /login
+                check_path: /login
+                provider: fos_userbundle
                 oauth_user_provider:
-                    service: my_user_provider
-            logout: true
+                    service: hwi_oauth.user.provider.fosub_bridge
+            logout:
+                path: /logout
+                target: /connect
             anonymous:    true
         admin:
             pattern:            /admin(.*)
