--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -135,7 +135,7 @@ sonata_user:
 hwi_oauth:
     connect:
         confirmation: true
-#        account_connector: my_user_provider
+        account_connector: my_user_provider
     firewall_name: main
     fosub:
         username_iterations: 30
