--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -5,7 +5,7 @@ parameters:
 parameters:
     my_user_provider.class: InfoSteel\AppBundle\Security\Core\User\FOSUBUserProvider
 
-#services:
+services:
     my_user_provider:
         class: "%my_user_provider.class%"
         arguments: [@fos_user.user_manager,{vkontakte: vkontakte_id, facebook: facebook_id}]
