fix according https://sonata-project.org/bundles/user/master/doc/reference/installation.html

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -104,7 +104,7 @@ sonata_block:
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
-    user_class: InfoSteel\AppBundle\Entity\User
+    user_class: Application\Sonata\UserBundle\Entity\User
 
     registration:
         confirmation:
