--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,13 +9,13 @@ security:
     role_hierarchy:
         ROLE_ADMIN:       [ROLE_USER, ROLE_SONATA_ADMIN]
         ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
-        SONATA:
-            - ROLE_SONATA_PAGE_ADMIN_PAGE_EDIT
+        #SONATA:
+        #   - ROLE_SONATA_PAGE_ADMIN_PAGE_EDIT
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         fos_userbundle:
-            id: fos_user.user_provider.username
+            id: fos_user.user_manager
 
     # the main part of the security, where you can set up firewalls
     # for specific sections of your app
@@ -44,9 +44,7 @@ security:
                 check_path: /login
                 oauth_user_provider:
                     service: my_user_provider
-            logout:
-                path: /logout
-                target: /connect
+            logout: true
             anonymous:    true
         admin:
             pattern:            /admin(.*)
