--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -12,8 +12,8 @@ _sonata_admin:
     type: sonata_admin
     prefix: /admin
 
-fos_user_security:
-    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+sonata_user_security:
+    resource: "@SonataUserBundle/Resources/config/routing/sonata_security_1.xml"
 
 sonata_user_resetting:
     resource: "@SonataUserBundle/Resources/config/routing/sonata_resetting_1.xml"
@@ -23,8 +23,8 @@ sonata_user_profile:
     resource: "@SonataUserBundle/Resources/config/routing/sonata_profile_1.xml"
     prefix: /profile
 
-fos_user_register:
-    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+sonata_user_register:
+    resource: "@SonataUserBundle/Resources/config/routing/sonata_registration_1.xml"
     prefix: /register
 
 sonata_user_change_password:
